--- a/Cue/app/src/main/res/layout/activity_main.xml
+++ b/Cue/app/src/main/res/layout/activity_main.xml
@@ -24,12 +24,22 @@
 
     <include layout="@layout/content_main"/>
 
+    <!--<android.support.design.widget.FloatingActionButton-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/fab2"-->
+        <!--android:src="@drawable/ic_add_white_18dp"-->
+        <!--app:borderWidth="2dp"-->
+        <!--app:fabSize="normal"-->
+        <!--android:onClick="submit"-->
+        <!--app:rippleColor="@color/colorPrimaryDark" />-->
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_email" />
+        android:src="@android:drawable/ic_input_add" />
 
 </android.support.design.widget.CoordinatorLayout>
