--- a/Cue/app/src/main/res/layout/content_main.xml
+++ b/Cue/app/src/main/res/layout/content_main.xml
@@ -13,8 +13,11 @@
     tools:showIn="@layout/activity_main"
     tools:context="com.example.dominic.cue.MainActivity">
 
-    <TextView
-        android:text="Hello World!"
+
+    <ListView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:id="@+id/listView"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
