--- a/Cue/app/src/main/res/layout/activity_main.xml
+++ b/Cue/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.dominic.cue.MainActivity">
+    tools:context="com.cueapp.cue.cue.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_height="wrap_content"
