--- a/Cue/app/src/main/res/layout/content_main.xml
+++ b/Cue/app/src/main/res/layout/content_main.xml
@@ -11,7 +11,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_main"
-    tools:context="com.example.dominic.cue.MainActivity">
+    tools:context="com.cueapp.cue.cue.MainActivity">
 
 
     <ListView
