--- a/Cue/app/src/main/res/layout/content_main.xml
+++ b/Cue/app/src/main/res/layout/content_main.xml
@@ -13,11 +13,13 @@
     tools:showIn="@layout/activity_main"
     tools:context="com.example.dominic.cue.MainActivity">
 
-
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/listView"
+        android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="false" />
+
 </RelativeLayout>
