--- a/Cue/app/src/main/res/layout/activity_create_notification.xml
+++ b/Cue/app/src/main/res/layout/activity_create_notification.xml
@@ -17,7 +17,20 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:popupTheme="@style/AppTheme.PopupOverlay">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="New Reminder"
+                android:textStyle="bold"
+                android:id="@+id/remindTitleText"
+                android:textSize="58px"
+                android:textColor="#ffffff"
+                android:singleLine="true" />
+
+        </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 
