--- a/Cue/app/src/main/res/layout/activity_main.xml
+++ b/Cue/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,8 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:src="@android:drawable/ic_input_add"
+        android:tint="@color/colorPrimaryDark"
         app:backgroundTint="@color/colorPrimary"
-        android:tint="@color/colorAccent"/>
+        android:onClick="createReminder"/>
 
 </android.support.design.widget.CoordinatorLayout>
