--- a/Cue/app/src/main/res/layout/content_main.xml
+++ b/Cue/app/src/main/res/layout/content_main.xml
@@ -21,6 +21,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="false"
         android:layout_alignParentStart="false"
         android:divider="#ffffff"/>
 
