--- a/Cue/app/src/main/res/layout/content_create_notification.xml
+++ b/Cue/app/src/main/res/layout/content_create_notification.xml
@@ -79,7 +79,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="Invite contact"
+        android:hint="Invite contact"
         android:ems="10"
         android:id="@+id/inviteEdit"
         android:width="300dp"
