--- a/Cue/app/src/main/res/layout/content_create_notification.xml
+++ b/Cue/app/src/main/res/layout/content_create_notification.xml
@@ -109,4 +109,20 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignTop="@+id/inviteEdit" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Save"
+        android:id="@+id/saveButton"
+        android:layout_below="@+id/inviteEdit"
+        android:layout_toLeftOf="@+id/editTime"
+        android:layout_toStartOf="@+id/editTime"
+        android:layout_marginTop="20dp"
+        android:background="#0e05c9"
+        android:textColor="#ffffff"
+        android:textStyle="bold"
+        android:textSize="46px"
+        android:width="50dp"
+        android:height="20dp" />
 </RelativeLayout>
