--- a/Cue/app/src/main/res/layout/content_create_notification.xml
+++ b/Cue/app/src/main/res/layout/content_create_notification.xml
@@ -125,5 +125,7 @@
         android:textStyle="bold"
         android:textSize="46px"
         android:width="50dp"
-        android:height="20dp" />
+        android:height="20dp"
+        android:onClick="submitReminder"/>
+
 </RelativeLayout>
