--- a/Cue/app/src/main/res/layout/content_create_notification.xml
+++ b/Cue/app/src/main/res/layout/content_create_notification.xml
@@ -19,6 +19,7 @@
         android:hint="Title"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:inputType="textCapWords"
         android:textSize="45px"
         android:textColorHint="#475c79"
         android:width="385dp" />
@@ -75,7 +76,7 @@
         android:layout_marginTop="10dp"
         android:textSize="45px" />
 
-    <EditText
+    <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
