--- a/Cue/app/src/main/res/layout/activity_view_reminder.xml
+++ b/Cue/app/src/main/res/layout/activity_view_reminder.xml
@@ -9,4 +9,108 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.cueapp.cue.cue.ViewReminderActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/reminderViewTitle"
+        android:hint="Title"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:textSize="45px"
+        android:textColorHint="#475c79"
+        android:width="385dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/reminderViewDescription"
+        android:width="385dp"
+        android:hint="Description"
+        android:layout_below="@+id/reminderViewTitle"
+        android:layout_centerHorizontal="true"
+        android:textColorHint="#475c79"
+        android:textSize="45px"
+        android:height="100dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="date"
+        android:ems="10"
+        android:id="@+id/reminderViewDate"
+        android:hint="1/11/2016"
+        android:width="165dp"
+        android:textSize="40px"
+        android:textColorHint="#475c79"
+        android:layout_below="@+id/reminderViewDescription"
+        android:layout_toRightOf="@+id/reminderViewTimeImage"
+        android:layout_toEndOf="@+id/reminderViewTimeImage"
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="time"
+        android:hint="10:00 AM"
+        android:ems="10"
+        android:textSize="40px"
+        android:id="@+id/reminderViewTime"
+        android:textColorHint="#475c79"
+        android:layout_below="@+id/reminderViewDescription"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:width="130dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:hint="Invite contact"
+        android:ems="10"
+        android:id="@+id/reminderViewSender"
+        android:width="300dp"
+        android:textSize="45px"
+        android:textColorHint="#475c79"
+        android:textColor="#475c79"
+        android:layout_alignBottom="@+id/reminderViewFriendsImage"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/time_image"
+        android:layout_marginTop="7dp"
+        android:id="@+id/reminderViewTimeImage"
+        android:layout_alignBottom="@+id/reminderViewDate"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/invite_friends"
+        android:id="@+id/reminderViewFriendsImage"
+        android:layout_below="@+id/reminderViewTimeImage"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Save"
+        android:id="@+id/saveButton"
+        android:layout_below="@+id/reminderViewSender"
+        android:layout_toLeftOf="@+id/reminderViewTime"
+        android:layout_toStartOf="@+id/reminderViewTime"
+        android:layout_marginTop="20dp"
+        android:background="#0e05c9"
+        android:textColor="#ffffff"
+        android:textStyle="bold"
+        android:textSize="46px"
+        android:width="50dp"
+        android:height="20dp"
+        android:onClick="submitReminder"/>
+
 </RelativeLayout>
