--- a/Cue/app/src/main/res/layout/activity_edit_reminder.xml
+++ b/Cue/app/src/main/res/layout/activity_edit_reminder.xml
@@ -65,7 +65,6 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
         android:hint="Sender"
         android:ems="10"
         android:id="@+id/reminderEditSender"
@@ -96,21 +95,44 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <Button
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Save"
-        android:id="@+id/saveButton"
         android:layout_below="@+id/reminderEditSender"
-        android:layout_toLeftOf="@+id/reminderEditTime"
-        android:layout_toStartOf="@+id/reminderEditTime"
-        android:layout_marginTop="20dp"
-        android:background="#0e05c9"
-        android:textColor="#ffffff"
-        android:textStyle="bold"
-        android:textSize="46px"
-        android:width="50dp"
-        android:height="20dp"
-        android:onClick="submitReminder"/>
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal"
+        >
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Edit"
+            android:id="@+id/reminderViewEditButton"
+            android:background="#0e05c9"
+            android:textColor="#ffffff"
+            android:textStyle="bold"
+            android:textSize="46px"
+            android:width="50dp"
+            android:height="20dp"
+            android:onClick="editReminder"
+            android:layout_weight="1.0" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cancel"
+            android:id="@+id/reminderEditCancelButton"
+            android:background="#0e05c9"
+            android:textColor="#ffffff"
+            android:textStyle="bold"
+            android:textSize="46px"
+            android:width="50dp"
+            android:height="20dp"
+            android:onClick="cancelChanges"
+            android:layout_weight="1.0"
+            android:layout_marginLeft="29dp"
+            android:layout_marginStart="29dp" />
+
+    </LinearLayout>
 
 </RelativeLayout>
