--- a/Cue/app/src/main/res/layout/activity_edit_reminder.xml
+++ b/Cue/app/src/main/res/layout/activity_edit_reminder.xml
@@ -40,6 +40,7 @@
         android:id="@+id/reminderEditDate"
         android:hint="1/11/2016"
         android:width="165dp"
+        android:focusable="false"
         android:textSize="40px"
         android:textColorHint="#475c79"
         android:layout_below="@+id/reminderEditDescription"
@@ -55,6 +56,7 @@
         android:hint="10:00 AM"
         android:ems="10"
         android:textSize="40px"
+        android:focusable="false"
         android:id="@+id/reminderEditTime"
         android:textColorHint="#475c79"
         android:layout_below="@+id/reminderEditDescription"
